@@ -13,7 +13,8 @@ rcode2bmp - convert identifier, depth, and normal maps to BMP images
 .SH DESCRIPTION
 .I Ra_bmp
 converts each input map to a suitable visualization as a BMP image.
-Supported types include Radiance pictures, depth maps produced by
+Supported types include Radiance pictures and hyperspectral images,
+depth maps produced by
 .I rcode_depth(1),
 identifier maps from
 .I rcode_ident(1),
@@ -55,4 +56,4 @@ to the viewer being pure black.
 Greg Ward
 .SH "SEE ALSO"
 falsecolor(1), ra_bmp(1), rcode_depth(1), rcode_ident(1), rcode_norm(1),
-rtpict(1)
+rcomb(1), rtpict(1)
