@@ -1,5 +1,5 @@
 #!/usr/bin/perl
-# RCSid $Id: rcode2bmp.pl,v 2.3 2022/11/15 23:47:50 greg Exp $
+# RCSid $Id: rcode2bmp.pl,v 2.4 2024/01/05 18:23:53 greg Exp $
 #
 # Convert one or more rtpict outputs into BMP for convenient viewing
 #
@@ -47,6 +47,10 @@ while ($#ARGV >= 0) {
 		} else {
 			$cmd = "ra_bmp -e auto '$ARGV[0]' '$dest'";
 		}
+	} elsif ("$format" =~ /^Radiance_spectra *$/) {
+		$cmd = "rcomb -fc -c RGB '$ARGV[0]' ";
+		$cmd .= "| $pfilt " if ($pfilt);
+		$cmd .=  "| ra_bmp -e auto - '$dest'";
 	} elsif ("$format" =~ /^16-bit_encoded_depth *$/) {
 		$cmd = "rcode_depth -r -ff -ho -Ho '$ARGV[0]' ";
 		$cmd .= q{| rcalc -if -of -e 'cond=9e9-$1;$1=$1' | total -if -u};
